@@ -1,5 +1,13 @@
 Imager release history.  Older releases can be found in Changes.old
 
+Imager 0.86 - unreleased
+===========
+
+Bug fixes:
+
+ - eliminate unused i_gif_opts type (clean-up)
+   https://rt.cpan.org/Ticket/Display.html?id=69245
+
 Imager 0.85_01 - 10 Oct 2011
 ==============
 
